--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "humanize-duration-ts": "^2.1.1",
     "immer": "^9.0.12",
     "moment": "^2.29.4",
+    "mongodb": "^5.6.0",
     "next": "^13.4.2",
     "next-compose-plugins": "^2.2.1",
     "react": "^18.2.0",
