--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -7,8 +7,24 @@ on:
     branches:
       - main
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+      - run: yarn install
+      - name: Build
+        run: yarn build
+        
   Deploy-Production:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
