--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -1,11 +1,14 @@
 name: Vercel Preview Deployment
+
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+
 on:
   push:
-    branches-ignore:
-      - main
+    branches:
+      - preview
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,7 +25,7 @@ jobs:
       - name: Build
         run: yarn build
 
-  Deploy-Preview:
+  deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
