--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,21 @@
-services:
-  mongodb:
-    image: mongo:6-jammy
-    ports:
-      - "27017:27017"
-    volumes:
-      - dbdata6:/data/db
-
 volumes:
-  dbdata6:
+  data_mongo1:
+
+services:
+  mongo1:
+    image: mongo:7.0
+    restart: unless-stopped
+    command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27017"]
+    ports:
+      - 27017:27017
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    healthcheck:
+      test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'host.docker.internal:27017'}]}) }" | mongosh --port 27017 --quiet
+      interval: 5s
+      timeout: 30s
+      start_period: 0s
+      start_interval: 1s
+      retries: 30
+    volumes:
+      - data_mongo1:/data/db
